# smart_gest

./: .env  .gitignore  Cargo.toml  cliente_edit.html  dici_template.csv  docker-compose.yml  ngrok.yml  schema.sql  start.sh
freeradius-config/: eap.conf  radiusd.conf  sql.conf
freeradius-config/mods-avaliable/: sql
freeradius-config/mods-enabled/: sql
freeradius-config/sites-enabled/: default
migrations/: 20240626164817_create_enderecos_table.sql  20240626165340_create_mikrotik_table.sql  20240626165343_create_planos_table.sql  20240626165507_create_clients_table.sql  20240701163306_create_contrato_table.sql  20240705172605_add_audit_data.sql  20240706042136_create_payment_received_table.sql  20240706042145_create_nfs_table.sql  20240710204104_create_dici_table.sql  20240730191049_create_provedor_table.sql  20240803034444_create_nf_lote_table.sql  20240804160223_create_email_config_table.sql  20240804163501_create_nf_config_table.sql
radius/: .env  Cargo.toml
radius/migrations/: 20240717210316_create_table_radacct.sql  20240717210337_create_table_radcheck.sql  20240717210355_create_table_radgroupcheck.sql  20240717210404_create_table_radgroupreply.sql  20240717210416_create_table_radreply.sql  20240717210425_create_table_radusergroup.sql  20240717210441_create_table_radpostauth.sql  20240717210450_create_table_nas.sql  20240725025138_create_table_radippool.sql
radius/src/: lib.rs  radius.rs
src/: db.rs  main.rs  model.rs
src/clientes/: cliente.rs  cliente_handler.rs  cliente_model.rs  mod.rs  plano.rs  plano_handler.rs
src/config/: config.rs  config_handler.rs  config_model.rs  endereco_model.rs  mod.rs  utils_handler.rs
src/financeiro/: contrato.rs  contrato_handler.rs  contrato_model.rs  dici.rs  dici_handler.rs  dici_model.rs  email_service.rs  mod.rs  nfs.rs  nfs_handler.rs  nfs_model.rs  nfs_service.rs  pagamentos.rs  pagamentos_model.rs
src/handlers/: cep.rs  clients.rs  config.rs  contrato.rs  dici.rs  login.rs  mikrotik.rs  mod.rs  nfs.rs  planos.rs  utils.rs  webhooks.rs
src/integracoes/: genieacs_voip_service.rs  mod.rs  webhook_model.rs  webhooks_service.rs
src/models/: client.rs  config.rs  contrato.rs  dici.rs  mikrotik.rs  mod.rs  nfs.rs  plano.rs  webhook.rs
src/provedor/: mikrotik.rs  mikrotik_handler.rs  mikrotik_model.rs  mod.rs
src/services/: email.rs  mod.rs  nfs.rs  voip.rs  webhooks.rs
templates/: base.html  cliente_add.html  cliente_edit.html  cliente_list.html  contrato_padrao_fibra+voip.html  contrato_padrao_fibra.html  contrato_padrao_voip.html  contrato_template_add_form.html  contrato_template_edit.html  contrato_template_list.html  dici_list.html  email_config_add.html  email_config_edit.html  endereco_snippet.html  mikrotik_add.html  mikrotik_edit.html  mikrotik_list.html  nf_config_add.html  nf_config_edit.html  nf_email.html  nf_lote_email.html  nota_fiscal_export.html  plano_add.html  plano_edit.html  plano_list.html  planos_add.html  provedor_config_add.html  provedor_config_edit.html
templates/cliente/: cliente_add.html  cliente_edit.html  cliente_list.html
templates/config/: email_config_add.html  email_config_edit.html  nf_config_add.html  nf_config_edit.html  provedor_config_add.html  provedor_config_edit.html
templates/contrato_template/: contrato_template_add_form.html  contrato_template_edit.html  contrato_template_list.html
templates/contratos/: contrato_padrao_fibra+voip.html  contrato_padrao_fibra.html  contrato_padrao_voip.html  padrao_fibra.html  teste.html
(+17 files in other folders)
