[package]
name = "smart_gest"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["radius"]

[dependencies]
askama = "0.12"
axum = "0.7"
axum-extra =  { version = "0.9",features = ["form"] }
chrono = "0.4"
cnpj = "0.2"
cpf = "0.3"
#openssh = "0.10"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.61"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros","time"] }
anyhow = "1.0.86"
validator = { version = "0.18", features = ["derive"] }
phonenumber = "0.3"
# tenho que enviar a nota fiscal para o cliente(talvez nao precide do dkim)configurado pelo smpt
#lettre = { version = "0.11.7", features = ["serde","dkim","tokio1","file-transport"] }
scraper = "0.19.0"
tracing = {version = "0.1.40",features = ["log"]}
tracing-subscriber ={version = "0.3.18",features = ["serde","serde_json","tracing"]}
#axum-login = "0.15.3"
time = { version =  "0.3.36", features = ["serde-human-readable"] }
axum-client-ip = "0.6.0"
once_cell = "1.19.0"
#quick-xml = {version = "0.35.0", features = ["serde","tokio","serialize"]}
